[temp] diagnostic styling of .spanified boundaries back in for now [new] shift-clicking to extend selection implemented [fix] tweaked selection behavior

--- a/styles.css
+++ b/styles.css
@@ -122,14 +122,12 @@ body {
 .spanified-word {
     display: inline-block;
 }
-/*
+
 .spanified {
-    background-color: rgba(0,0,255,0.1);
+    border-right: 1px solid rgba(0,0,0,0.25);
+    margin-right: -1px;
 }
-.spanified+.spanified:nth-child(2n){
-    background-color: rgba(255,0,0,0.1);
-}
-*/
+
 .selected, .selected-unwrap {
     background-color: rgba(0,0,255,0.3);
 }
